<resources>
    <string name="app_name">Caso.Practico.5</string>
    <string name="textview">TextView</string>
    <string name="cambiar">Cambiar</string>
    <string name="txtbanderanuevo">txtbanderanuevo</string>
    <string name="cancelar">Cancelar</string>
    <string name="comunidad">Comunidad</string>
    <string name="recargar">Recargar</string>
    <string name="limpiar">Limpiar</string>
    <string name="recargar_por_defecto">Recargar por defecto</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="comunidades">COMUNIDADES</string>
    <string name="recordar">Recordar</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="foto">Foto</string>
</resources>